--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,65 @@
+absl-py==0.12.0
+appdirs==1.4.4
+astunparse==1.6.3
+cachetools==4.2.1
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
+cycler==0.10.0
+distlib==0.3.1
+docopt==0.6.2
+filelock==3.0.12
+flatbuffers==1.12
+fpdf==1.7.2
+gast==0.4.0
+getcomic==2.0.13
+google-auth==1.28.1
+google-auth-oauthlib==0.4.4
+google-pasta==0.2.0
+grpcio==1.34.1
+h5py==3.1.0
+idna==2.10
+joblib==1.0.1
+keras-nightly==2.5.0.dev2021032900
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+Markdown==3.3.4
 matplotlib==3.4.1
-pandas==1.2.3
-stopwordsiso==0.6.1
+nltk==3.6.1
 numpy==1.19.5
-scikit_learn==0.24.1
+oauthlib==3.1.0
+opt-einsum==3.3.0
+pandas==1.2.3
+pathlib==1.0.1
+Pillow==8.2.0
+pipreqs==0.4.10
+protobuf==3.15.8
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2021.1
+regex==2021.4.4
+requests==2.25.1
+requests-oauthlib==1.3.0
+rsa==4.7.2
+scikit-learn==0.24.1
+scipy==1.6.2
+selenium==3.141.0
+six==1.15.0
+sklearn==0.0
+stopwordsiso==0.6.1
+tensorboard==2.4.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.5.0rc0
+termcolor==1.1.0
+tf-estimator-nightly==2.5.0.dev2021032501
+threadpoolctl==2.1.0
+tqdm==4.60.0
+typing-extensions==3.7.4.3
+urllib3==1.26.4
+virtualenv==20.4.3
+Werkzeug==1.0.1
+wrapt==1.12.1
+xgboost==1.4.0
+yarg==0.1.9
